--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "sample_app",
   "private": true,
   "dependencies": {
-    "jquery": "^3.3.1"
+    "jquery": "^1.9.1"
+  },
+  "engines": {
+    "yarn": "1.6.1",
+    "node": "10.0.0"
   }
 }
