--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "jquery": "^1.9.1"
   },
   "engines": {
-    "yarn": "1.6.1",
+    "yarn": "v1.6.1",
     "node": "10.0.0",
     "npm": "1.2.10"
   }
