--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "sample_app",
   "private": true,
   "dependencies": {
-    "jquery": "^1.9.1"
+    "jquery": "^1.9.1",
+    "node": "^10.0.0"
   },
   "engines": {
     "yarn": "v1.6.0",
