--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "^10.0.0"
   },
   "engines": {
-    "yarn": "v1.6.0",
-    "node": "v10.0.0",
+    "yarn": "1.6.0",
+    "node": "10.0.0",
   }
 }
